# JobScout-Pipe

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml  requirements.txt
config/: keywords.yaml
data/: seed_companies.csv
data/raw/: corporates.txt  startups.txt
jobpipe/: __init__.py  classify.py  cli.py  config.py  dedup.py  models.py  normalize.py  orchestrator.py  sink.py
jobpipe/discovery/: __init__.py  base.py  csv_seed.py  handelsregister.py  serp.py
jobpipe/extractors/: __init__.py  ashby.py  base.py  dom.py  greenhouse.py  join.py  lever.py  personio.py  smartrecruiters.py  successfactors.py  workday.py
jobpipe/filtering/: __init__.py  semantic.py  temporal.py
jobpipe/net/: __init__.py  http.py  proxy.py  throttle.py
scripts/: build_seed_csv.py
tests/: conftest.py  test_p0_scaffold.py  test_p1_models.py  test_p2_classify.py  test_p3_extractors.py  test_p4_filtering.py  test_p5_dedup_sink.py  test_p6_dom.py  test_p7_net.py  test_p8_e2e.py
