[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jobpipe"
version = "0.1.0"
description = "Automated extraction of entry/junior/mid/graduate tech job postings from German company career pages (ATS-first, scrapling DOM fallback). Extraction only — never applies."
requires-python = ">=3.10"
dependencies = [
    "scrapling[fetchers]>=0.4.9",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "flashtext>=2.7",
    "dateparser>=1.2",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "lxml>=5.0",
    "tenacity>=8.2",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
jobpipe = "jobpipe.cli:main"

[tool.setuptools.packages.find]
include = ["jobpipe*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "live: test performs live network calls to real ATS endpoints",
    "browser: test requires scrapling's stealth browser (scrapling install)",
]
filterwarnings = [
    "ignore:The 'strip_cdata' option:DeprecationWarning",
]
